[WEBSITE] Fixed overflow issue with pop_up_window

--- a/website/app/routes/layout.css
+++ b/website/app/routes/layout.css
@@ -45,13 +45,10 @@ header .button{
 }
 
 .window_container{
-    text-align: center;
-    display:flex;
-    align-items: center;
-    justify-content: center;
+    display:grid;
+    place-items: center;
     width: 100%;
     height: 100%;
-    flex-direction: column;
 }
 
 .pop_up_container{
@@ -62,15 +59,15 @@ header .button{
     height: 100vh;
     background-color: #1c1c1cf6;
     z-index: 3;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display:grid;
+    place-items: center;
     overflow: scroll;
 }
 
 .pop_up_window{
     display: block;
-    margin-bottom: 10vh;
+    margin-bottom: 20vh;
+    margin-top: 10vh;
     background-color: rgb(0, 0, 0);
     padding: 20px;
     border-radius: 25px;
@@ -115,6 +112,6 @@ header .button{
 }
 
 .error{
-    color:red;
+    color: red;
     margin-bottom: 10px;
 }
